// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files 1`] = `
Array [
  "account-insert-request.form.ts",
  "account-insert-request.properties.ts",
  "account-insert-request.test-obj-fac.ts",
  "account-update-request.form.ts",
  "account-update-request.properties.ts",
  "account-update-request.test-obj-fac.ts",
  "account.properties.ts",
  "account.test-obj-fac.ts",
  "contact-insert-request.properties.ts",
  "contact-insert-request.test-obj-fac.ts",
  "contact-update-request.properties.ts",
  "contact-update-request.test-obj-fac.ts",
  "contact.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
/**
 * Customer Account
 */
export enum AccountProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  TENANT_ID = 'tenantId',
  CONTACT_COUNT = 'contactCount',
  PARENT_ACCOUNT = 'parentAccount',
  CONTACTS = 'contacts',
  CHILD_ACCOUNTS = 'childAccounts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { AccountProperties } from './account.properties';

export function createTestAccount() {
    return { 
      [AccountProperties.ID]: 'ID',
      [AccountProperties.REF_ID]: 'REF_ID',
      [AccountProperties.NAME]: 'NAME',
      [AccountProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountProperties.IS_ENABLED]: false,
      [AccountProperties.EMAIL_INVOICE]: false,
      [AccountProperties.TENANT_ID]: 'TENANT_ID',
      [AccountProperties.CONTACT_COUNT]: 1, 
      [AccountProperties.PARENT_ACCOUNT]: undefined,
      [AccountProperties.CONTACTS]: [],
      [AccountProperties.CHILD_ACCOUNTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-insert-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';

export interface IAccountInsertRequestForm {
    id: FormControl<string | null | undefined>;
    refId: FormControl<string | null | undefined>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null | undefined>;
    emailInvoice: FormControl<boolean | null | undefined>;
    contacts: FormArray<FormGroup<IContactForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountInsertRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-insert-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { AccountInsertRequestProperties } from './account-insert-request.properties';

export function createTestAccountInsertRequest() {
    return { 
      [AccountInsertRequestProperties.ID]: 'ID',
      [AccountInsertRequestProperties.REF_ID]: 'REF_ID',
      [AccountInsertRequestProperties.NAME]: 'NAME',
      [AccountInsertRequestProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountInsertRequestProperties.EMAIL_INVOICE]: false, 
      [AccountInsertRequestProperties.CONTACTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-update-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';

export interface IAccountUpdateRequestForm {
    id: FormControl<string | null | undefined>;
    refId: FormControl<string>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null | undefined>;
    isEnabled: FormControl<boolean | null | undefined>;
    emailInvoice: FormControl<boolean | null | undefined>;
    contacts: FormArray<FormGroup<IContactForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountUpdateRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: account-update-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { AccountUpdateRequestProperties } from './account-update-request.properties';

export function createTestAccountUpdateRequest() {
    return { 
      [AccountUpdateRequestProperties.ID]: 'ID',
      [AccountUpdateRequestProperties.REF_ID]: 'REF_ID',
      [AccountUpdateRequestProperties.NAME]: 'NAME',
      [AccountUpdateRequestProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountUpdateRequestProperties.IS_ENABLED]: false,
      [AccountUpdateRequestProperties.EMAIL_INVOICE]: false, 
      [AccountUpdateRequestProperties.CONTACTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: contact.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ContactProperties } from './contact.properties';

export function createTestContact() {
    return { 
      [ContactProperties.ID]: 'ID',
      [ContactProperties.IS_ENABLED]: false,
      [ContactProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactProperties.LAST_NAME]: 'LAST_NAME',
      [ContactProperties.MIDDLE_NAME]: 'MIDDL',
      [ContactProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1_ADDRESS_LINE_1_ADDRESS_LINE_1_ADDRESS_LINE_1',
      [ContactProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactProperties.CITY]: 'CITY',
      [ContactProperties.STATE]: 'STATE',
      [ContactProperties.ZIP]: 'ZIP',
      [ContactProperties.EMAILS]: 'contact@email.org',
      [ContactProperties.PHONE_1]: 'PHONE_1_PHONE_',
      [ContactProperties.PHONE_2]: 'PHONE_2_PHONE_', 
      [ContactProperties.ACCOUNT]: undefined,
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: contact-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactInsertRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: contact-insert-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ContactInsertRequestProperties } from './contact-insert-request.properties';

export function createTestContactInsertRequest() {
    return { 
      [ContactInsertRequestProperties.ID]: 'ID',
      [ContactInsertRequestProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactInsertRequestProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactInsertRequestProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactInsertRequestProperties.LAST_NAME]: 'LAST_NAME',
      [ContactInsertRequestProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [ContactInsertRequestProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [ContactInsertRequestProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactInsertRequestProperties.CITY]: 'CITY',
      [ContactInsertRequestProperties.STATE]: 'STATE',
      [ContactInsertRequestProperties.ZIP]: 'ZIP',
      [ContactInsertRequestProperties.EMAILS]: 'EMAILS',
      [ContactInsertRequestProperties.PHONE_1]: 'PHONE_1',
      [ContactInsertRequestProperties.PHONE_2]: 'PHONE_2', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: contact-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactUpdateRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: contact-update-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ContactUpdateRequestProperties } from './contact-update-request.properties';

export function createTestContactUpdateRequest() {
    return { 
      [ContactUpdateRequestProperties.ID]: 'ID',
      [ContactUpdateRequestProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactUpdateRequestProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactUpdateRequestProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactUpdateRequestProperties.LAST_NAME]: 'LAST_NAME',
      [ContactUpdateRequestProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [ContactUpdateRequestProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [ContactUpdateRequestProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactUpdateRequestProperties.CITY]: 'CITY',
      [ContactUpdateRequestProperties.STATE]: 'STATE',
      [ContactUpdateRequestProperties.ZIP]: 'ZIP',
      [ContactUpdateRequestProperties.EMAILS]: 'EMAILS',
      [ContactUpdateRequestProperties.PHONE_1]: 'PHONE_1',
      [ContactUpdateRequestProperties.PHONE_2]: 'PHONE_2', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  accounts = '/api/v1/Accounts.{format}',
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  readonly accounts: string;
  readonly contacts: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service - Models should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form';
export * from './account-insert-request.properties';
export * from './account-insert-request.test-obj-fac';
export * from './account-update-request.form';
export * from './account-update-request.properties';
export * from './account-update-request.test-obj-fac';
export * from './account.properties';
export * from './account.test-obj-fac';
export * from './contact-insert-request.properties';
export * from './contact-insert-request.test-obj-fac';
export * from './contact-update-request.properties';
export * from './contact-update-request.test-obj-fac';
export * from './contact.test-obj-fac';
"
`;
